API v2 updates
